fixed hamburger menu color and made collapse responsive in dashboard, also cleaned up index.html.erb for dashboard

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -529,3 +529,46 @@ h1 {
     justify-content: flex-start; /* Align items to the start of the container */
     gap: 10px; /* Optional: adds some space between the buttons */
 }
+
+.navbar-toggler-icon {
+    color: #FFFFFF;
+}
+
+.announcement-header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+
+}
+.announcement-list {
+    padding: 20px;
+    overflow-y: auto;
+}
+
+.view-all-announcements {
+    position: sticky;
+    bottom: 0;
+    z-index: 1000;
+    width: 100%;
+    text-align: center;
+    margin: 0px 0; /* Adjust as needed */
+    background: none;
+    text-decoration: underline;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.view-all-events {
+    bottom: 0;
+    z-index: 1000;
+    width: 100%;
+    text-align: center;
+    margin: 0px 0; /* Adjust as needed */
+    background: none;
+    text-decoration: underline;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+}
